# rust-estudos

./: .gitignore  README.md
backup_sync/: Cargo.toml
dashboard_android/: Cargo.toml
dashboard_android/src/ui/: app.slint
dashboard_android/src/ui/components/: button.slint  pizza_chart.slint
estudos_slint/: build.rs
estudos_slint/src/: main.rs
estudos_slint/src/ui/: app.slint
novo_projeto/: Cargo.toml
raspberry_dashboard/: Cargo.toml
raspberry_dashboard/examples/: debug_disks.rs
raspberry_dashboard/src/: main.rs
raspberry_dashboard/ui/: appwindow.slint  components.slint
site-orcamento/: .env  Cargo.toml  schema.sql
site-orcamento/migrations/: 20260228230000_init.sql
site-orcamento/src/: api.rs  api_config.rs  db.rs  frontend.rs  lib.rs  main.rs
site-orcamento/src/entities/: client.rs  mod.rs  product.rs  quotation.rs  quotation_item.rs
site-orcamento/ui/: app.slint  index.html
site-orcamento/ui/components/: StatCard.slint  styled_line_edit.slint
site-orcamento/ui/pages/clientes/: mod.slint
site-orcamento/ui/pages/dashboard/: mod.slint
site-orcamento/ui/pages/orcamentos/: mod.slint
site-orcamento/ui/pages/produtos/: mod.slint
slint-app/: Cargo.toml
slint-app/src/: main.rs
slint-app/ui/: login.slint  main.slint  principal.slint
slint_examples/propriedades_callbacks/: Cargo.toml
slint_examples/propriedades_callbacks/src/: main.rs
slint_examples/propriedades_callbacks/src/ui/: app.slint  contador.slint
slint_examples/timers_conceito/: Cargo.toml
slint_examples/timers_conceito/src/: main.rs
slint_examples/timers_conceito/src/ui/: app.slint
slint_examples/timers_conceito/src/ui/componentes/: sidebar.slint
sysmar_rust/: Cargo.toml
sysmar_rust/ui/: app.slint  cadastro.slint  financeiro.slint
sysmar_slint/: .env  Cargo.toml  README.MD
sysmar_slint/src/: main.rs  schema.rs
sysmar_slint/src/db/: connection.rs  mod.rs  queries.rs
sysmar_slint/src/domains/: mod.rs
sysmar_slint/src/domains/dashboard/: mod.rs  queries.rs  repository.rs
sysmar_slint/src/entities/: clientes.rs  fluxo_catraca.rs  mod.rs  pagamentos.rs  prelude.rs  tags.rs
sysmar_slint/src/models/: mod.rs
sysmar_slint/src/models/dashboard/: relatorio.rs
sysmar_slint/src/models/financeiro/: financeiro.rs
sysmar_slint/src/queries/dashboard/: generic.rs  mod.rs
sysmar_slint/src/queries/financeiro/: generic.rs
sysmar_slint/src/services/dashboard/: generic.rs  mod.rs
sysmar_slint/src/services/financeiro/: generic.rs
sysmar_slint/src/ui/: app.slint
sysmar_slint/src/ui/pages/: cadastro.slint  dashboard.slint
sysmar_slint/src/ui/pages/components/: card_icones.slint  card_lateral.slint  grafico.slint  legenda.slint  shadow.slint
variaveis/: README.md  tipos.rs
variaveis/chat_estudos/: Cargo.toml
variaveis/chat_estudos/src/: main.rs
