[package]
edition = "2021"
name = "estudos_slint"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "2.2.0", features = ["mysql", "r2d2", "chrono"]}
dotenvy = "0.15"

slint = {version = "^1.14", features = [
  "std",
  "backend-winit",
  "renderer-winit-skia", # ou "renderer-winit-femtovg" se preferir CPU
]}
[build-dependencies]
slint-build = "^1.14"

[package.metadata.slint]
file = "src/ui/app.slint"
