[package]
edition = "2021"
name = "estudos_slint"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-rust_decimal"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

slint = {version = "^1.14", features = [
  "std",
  "backend-winit",
  "renderer-winit-skia", # ou "renderer-winit-femtovg" se preferir CPU
]}
[build-dependencies]
slint-build = "^1.14"

[package.metadata.slint]
file = "src/ui/app.slint"
